sync: Java agent Spring AI refactor + PreviewPanel/Flutter/electron updates